--- a/lesson2/hours.html
+++ b/lesson2/hours.html
@@ -2,55 +2,66 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="Hours" />
     <title>Hours</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="js/main.js" defer></script>
   </head>
   <body>
-    <header>
-      <h1>Little Taco Shop Hours</h1>
-      <nav>
-        <ul>
+    <header class="header">
+      <h1 class="header__h1">Little Taco Shop Hours</h1>
+      <nav class="header__nav">
+        <ul class="header__ul">
           <li>
             <a href="index.html">Home</a>
           </li>
+
           <li>
-            <a href="/#about"
-              >About <abbr title="Little Taco Shop">LTS</abbr></a
-            >
-          </li>
-          <li>
-            <a href="/#menu">Our menu</a>
+            <a href="/#menu">Menu</a>
           </li>
           <li>
             <a href="contact.html">Contact Us</a>
           </li>
+          <li>
+            <a href="about.html">About </a>
+          </li>
         </ul>
       </nav>
+    </header>
+    <section class="hero">
       <figure>
         <img
-          src="https://github.com/gitdagray/html_course/blob/main/10_lesson/img/tacos_tray_400x267.png?raw=true"
+          src="https://github.com/gitdagray/css_course/blob/main/24_lesson_starter/img/tacos_tray_1000x667.png?raw=true"
           alt="Taco tray"
+          width="1000"
+          height="667"
         />
-        <figcaption>A Tray of Tasty Tacos</figcaption>
+        <figcaption class="offscreen">A Tray of Tasty Tacos</figcaption>
       </figure>
-    </header>
-    <hr />
-    <main>
-      <p>We are open 7 days a week!</p>
-      <dl>
-        <dt>Sunday-Thursday</dt>
-        <dd>11am-9pm</dd>
-      </dl>
-      <dl>
-        <dt>Friday-Saturday</dt>
-        <dd>11am-11pm</dd>
-      </dl>
-      <a href="#">Back to Top</a>
+    </section>
+
+    <main class="main">
+      <article class="main__article">
+        <h2>Hours</h2>
+        <p>We are open 7 days a week!</p>
+        <dl>
+          <dt>Sunday-Thursday</dt>
+          <dd>11am-9pm</dd>
+        </dl>
+        <dl>
+          <dt>Friday-Saturday</dt>
+          <dd>11am-11pm</dd>
+        </dl>
+      </article>
     </main>
-    <hr />
-    <footer>
-      <p>Copyright &copy; The Little Taco Shop</p>
+
+    <footer class="footer">
+      <p>
+        <span class="nowrap">Copyright &copy; <time id="year"></time></span>
+        <span class="nowrap">The Little Taco Shop</span>
+      </p>
     </footer>
   </body>
 </html>
+
