--- a/lesson2/contact.html
+++ b/lesson2/contact.html
@@ -2,46 +2,70 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="Contact Us" />
     <title>Contact Us</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="js/main.js" defer></script>
   </head>
   <body>
-    <header>
-      <h1>Contact US</h1>
-      <nav>
-        <ul>
+    <header class="header">
+      <h1 class="header__h1">Little Taco Shop</h1>
+      <nav class="header__nav">
+        <ul class="header__ul">
           <li>
-            <a href="index.html">Home</a>
+            <a href="/">Home</a>
           </li>
+
           <li>
-            <a href="/#about">About</a>
-          </li>
-          <li>
-            <a href="/#menu">Our menu</a>
+            <a href="/#menu">Menu</a>
           </li>
           <li>
             <a href="hours.html">Store Hours</a>
           </li>
+          <li>
+            <a href="about.html">About</a>
+          </li>
         </ul>
       </nav>
+    </header>
+    <section class="hero">
       <figure>
         <img
-          src="https://github.com/gitdagray/html_course/blob/main/10_lesson/img/tacos_close_up_400x260.png?raw=true"
+          src="https://github.com/gitdagray/css_course/blob/main/24_lesson_starter/img/tacos_close_up_1000x649.png?raw=true"
           alt="Taco closeup"
+          width="1000"
+          height="649"
         />
-        <figcaption>Little Taco Shop Tacos</figcaption>
+        <figcaption class="offscreen">Little Taco Shop Tacos</figcaption>
       </figure>
-    </header>
-    <main>
-      <section>
-        <h2>Our Contact form</h2>
-        <form action="https://httpbin.org/get" method="get">
-          <fieldset>
-            <legend>Send Us A Message</legend>
-            <p>
-              <label for="firstname">Name:</label>
+    </section>
+
+    <main class="main">
+      <article class="main__article">
+        <h2>Our Location</h2>
+        <address>
+          555 Taco Temptation Lane, Suite T <br />Kansas city, MO 55555-5555
+          <br /><br />
+          Phone: <a href="tel:+5555555555">555-555-5555</a>
+        </address>
+        <br />
+        <a href="#">Back to Top</a>
+      </article>
+      <hr />
+      <article class="main__article contact">
+        <h2 class="contact__h2">Our Contact form</h2>
+        <form
+          action="https://httpbin.org/get"
+          method="get"
+          class="contact__form"
+        >
+          <fieldset class="contact__fieldset">
+            <legend class="offscreen">Send Us A Message</legend>
+            <p class="contact__p">
+              <label class="contact__label" for="firstname">Name:</label>
               <input
+                class="contact__input"
                 type="text"
                 name="firstname"
                 id="firstname"
@@ -50,9 +74,10 @@
                 autocomplete="on"
               />
             </p>
-            <p>
-              <label for="email">Email:</label>
+            <p class="contact__p">
+              <label class="contact__label" for="email">Email:</label>
               <input
+                class="contact__input"
                 type="email"
                 name="email"
                 id="email"
@@ -61,10 +86,11 @@
                 autocomplete="on"
               />
             </p>
-            <p>
-              <label for="message">Your Message:</label>
+            <p class="contact__p">
+              <label class="contact__label" for="message">Your Message:</label>
               <br />
               <textarea
+                class="contact__textarea"
                 name="message"
                 id="message"
                 cols="30"
@@ -74,22 +100,16 @@
             </p>
           </fieldset>
 
-          <button type="submit">Submit</button>
-          <button type="reset">Reset</button>
+          <button class="contact__button" type="submit">Submit</button>
+          <button class="contact__button" type="reset">Reset</button>
         </form>
-      </section>
-      <section>
-        <h2>Our Location</h2>
-        <address>
-          555 Taco Temptation Lane, Suite T <br />Kansas city, MO 55555-5555
-          <br /><br />
-          Phone: <a href="tel:+5555555555">555-555-5555</a>
-        </address>
-        <br />
-        <a href="#">Back to Top</a>
-        <hr />
-      </section>
+      </article>
     </main>
-    <footer>Copyright &copy; The Little Taco Shop</footer>
+    <footer class="footer">
+      <p>
+        <span class="nowrap">Copyright &copy; <time id="year"></time></span>
+        <span class="nowrap">The Little Taco Shop</span>
+      </p>
+    </footer>
   </body>
 </html>
